# weak5_template

./: CMakeLists.txt  readme.md
include/: Document.hpp  Library.hpp  LogFile.hpp  Logger.hpp  Matrix.hpp  SafeArray.hpp  file_raii.hpp
src/: Document.cpp  Library.cpp  LogFile.cpp  Logger.cpp  Matrix.cpp  SafeArray.cpp  file_raii.cpp
tests/: Document_Library_tests.cpp  Logger_tests.cpp  Matrix_tests.cpp  SafeArray_tests.cpp  file_raii_tests.cpp
